// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for component GifGrid should be render GifGrid 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
    Spiderman
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests for component GifGrid should be render GifGrid with imagens of useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
    Spiderman
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="123ABC"
      key="123ABC"
      title="Poster Spiderman"
      url="http://marvel.com/poster/spiderman.jpg"
    />
  </div>
</Fragment>
`;
